<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MessageApp</string>
    <string name="patient_name">Name</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="create_button">Create</string>
    <string name="user_name">User Name</string>
    <string name="user_password">Password</string>
    <string name="user_logout">Logout</string>
    <string name="thread_name">Thread</string>
    <string name="create_thread">Create Thread</string>
    <string name="category_name">Category Name</string>
    <string name="topic_name">Topic</string>
    <string name="view_thread">View Thread</string>
    <string name="delete_thread">Delete Thread</string>
    <string name="view_categories">View Categories</string>
    <string name="create_topic">Create Topic</string>
    <string name="action_settings">Settings</string>
    <string name="submitNewPatientData">Submit</string>
    <string name="viewAllThreads">View All Threads</string>
    <string name="day">day</string>
    <string name="list">List</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="id">ID</string>
    <string name="sub">subscribe</string>
    <string name="unsub">unsubscribe</string>
    <string name="view">View</string>
    <string name="topic_list">Topic List</string>
    <string name="thread_info">Thread Information</string>
    <string name="get_response">Get Response</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_view_thread">ViewThreadActivity</string>
    <string name="title_activity_create_thread">CreateThreadActivity</string>
    <string name="title_activity_create_topic">CreateTopicActivity</string>
    <string name="title_activity_view_categories">ViewCategoriesActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="find_thread">Find Thread</string>
    <string name="find_thread_threadID">Find Thread By Thread ID</string>
    <string name="find_thread_categoryID">Find Thread By Category ID</string>
    <string name="find_thread_categoryName">Find Thread By Category Name</string>
    <string name="find_thread_topicID">Find Thread By Topic ID</string>
    <string name="title_activity_find_thread">FindThreadActivity</string>
    <string name="title_activity_view_list_thread">ViewListThreadActivity</string>
    <string name="title_activity_view_toic_list">ViewToicListActivity</string>
    <string name="title_activity_view_topic_list">ViewTopicListActivity</string>
    <string name="title_activity_view_topic_list_by_category">ViewTopicListByCategoryActivity</string>
    <string name="title_activity_ban_user">BanUserActivity</string>
    <string name="title_activity_edit_reply">EditReplyActivity</string>
    <string name="title_activity_reply_thread">ReplyThreadActivity</string>
    <string name="editReplyBodyTag"></string>
    <string name="editReplyIDTag"></string>
    <string name="title_activity_create_category">CreateCategoryActivity</string>
    <string name="reply">Reply</string>
    <string name="new_reply_body">Enter reply</string>
    <string name="title_activity_subscriptions">SubscriptionsActivity</string>
    <string name="title_activity_view_subscriptions">ViewSubscriptionsActivity</string>
    <string name="editThreadButtonID"> </string>
    <string name="editThreadBodyTag"> </string>
	<string-array name="drawer_array">
        <item>Categories</item>
        <item>Subscriptions</item>
        <item>Topics</item>
        <item>Threads</item>
        <item>New Thread</item>
        <item>New Topic</item>
        <item>Find Thread</item>
        <item>Logout</item>
    </string-array>
    <string-array name="admin_drawer_array">
        <item>Categories</item>
        <item>Subscriptions</item>
        <item>Topics</item>
        <item>Threads</item>
        <item>New Thread</item>
        <item>New Category</item>
        <item>New Topic</item>
        <item>Find Thread</item>
        <item>Ban User</item>
        <item>Logout</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
</resources>
