<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.messageapp.FindThreadActivity" >

    <EditText
        android:id="@+id/input_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/thread_create_button"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button3"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/id" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thread_create_button"
        android:layout_centerHorizontal="true"
        android:onClick="findThreadByTopicID"
        android:text="@string/find_thread_topicID" />

    <Button
        android:id="@+id/thread_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_id"
        android:layout_centerHorizontal="true"
        android:onClick="findThreadByThreadID"
        android:text="@string/find_thread_threadID" />

    <EditText
        android:id="@+id/input_category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/thread_create_button"
        android:layout_below="@+id/button3"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/category_name" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_category_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:onClick="findThreadByCategoryName"
        android:text="@string/find_thread_categoryName" />

</RelativeLayout>
