<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/thread_create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:onClick="viewCategories"        
        android:text="@string/view_categories" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/thread_create_button"
        android:layout_alignRight="@+id/admin_buttons"
        android:layout_below="@+id/thread_create_button"
        android:onClick="createTopic"
        android:text="@string/create_topic" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignRight="@+id/thread_create_button"
        android:onClick="createThread"
        android:text="@string/create_thread" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/button2"
        android:onClick="findThread"
        android:text="@string/find_thread" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_below="@+id/button6"
        android:onClick="viewTopic"
        android:text="@string/topic_list" />

	<Button
	    android:id="@+id/button1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/button4"
	    android:layout_alignRight="@+id/button4"
	    android:layout_below="@+id/button4"
	    android:onClick="viewAllThreads"
	    android:text="@string/viewAllThreads" />
        
    <LinearLayout
        android:id="@+id/admin_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button5"
        android:layout_below="@+id/button3"
        android:layout_marginTop="85dp"
        android:orientation="vertical" >

    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignRight="@+id/button5"
        android:layout_below="@+id/button4"
        android:onClick="logoutUser"
        android:text="@string/user_logout" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:onClick="subscriptions"
        android:text="Subscriptions" />

</RelativeLayout>