<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.messageapp.EditThreadActivity" >

    <EditText
        android:id="@+id/thread_category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:hint="@string/category_name"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/thread_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_thread_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/thread_info"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/thread_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:onClick="editThread"
        android:text="@string/edit_button" />

    <EditText
        android:id="@+id/thread_topic_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/thread_category_name"
        android:layout_below="@+id/thread_category_name"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/topic_name" />

    <EditText
        android:id="@+id/new_thread_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/thread_topic_name"
        android:layout_below="@+id/thread_topic_name"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/thread_name" />

</RelativeLayout>
