<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.messageapp.ViewThreadActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/subButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub" 
                        android:onClick="subTopicsInThread"/>
                    
                    <Button
                        android:id="@+id/delete_thread"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:onClick="deleteThread"
                        android:text="@string/delete_thread" />

                    <TextView
                        android:id="@+id/viewThreadTitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Title"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/viewThreadTimestampText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Posted at: " />

                    <TextView
                        android:id="@+id/viewThreadUsernameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Posted by: " />

                    <TextView
                        android:id="@+id/viewThreadBodyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Body" />

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/editThreadButtonHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewThreadReplyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:longClickable="false"
                android:orientation="vertical" >

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/scrollView1"
        android:onClick="replyThread"
        android:text="@string/reply" />

</RelativeLayout>

